/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/servicepb";

package servicepb;

import "api/applicationpb/block_tx.proto";

import "api/committerpb/ref.proto";

// A block reference with respect to the block generated by the orderer.
message BlockRef {
    uint64 number = 1;
}

// A committer's representation of a TX in the blockchain.
message TxWithRef {
    committerpb.TxRef ref = 1;    // The TX reference.
    applicationpb.Tx content = 2; // The TX content.
}

message QueryStatus {
    repeated string txIDs = 1;
}
